[gd_scene load_steps=4 format=3 uid="uid://c0h62tpxaquka"]

[ext_resource type="Theme" uid="uid://b2v1n2ce5pu4g" path="res://UI/wood_theme.tres" id="1_bgayg"]
[ext_resource type="Script" path="res://Scenes/main_menu.gd" id="2_2egdc"]
[ext_resource type="PackedScene" uid="uid://xwshy5qrxgsd" path="res://tile_map_ground.tscn" id="2_sk5kp"]

[node name="MainMenu" type="Control" node_paths=PackedStringArray("credits_popup", "play_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_bgayg")
script = ExtResource("2_2egdc")
credits_popup = NodePath("PanelContainer/PopupPanel")
play_button = NodePath("PanelContainer/VBoxContainer/Button_Play")

[node name="TileMapGround" parent="." instance=ExtResource("2_sk5kp")]
layer_0/tile_data = PackedInt32Array(65535, 0, 0, -1, 0, 0, -65536, 0, 0, -131072, 0, 0, -131071, 0, 0, -196607, 0, 0, -196606, 0, 0, -196605, 0, 0, -196604, 0, 0, -196603, 0, 0, -131066, 0, 0, -131065, 0, 0, -131064, 262144, 0, -131063, 0, 0, -131062, 0, 0, -131061, 0, 0, -131060, 0, 0, -131059, 0, 0, -131058, 0, 0, -131057, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, 18, 0, 0, 19, 0, 0, 65555, 0, 0, 131091, 0, 0, 196627, 0, 0, 262163, 0, 0, 327698, 0, 0, 393234, 0, 0, 458770, 0, 0, 524306, 0, 0, 589842, 65536, 0, 589843, 65536, 0, 655379, 0, 0, 655378, 65536, 0, 720914, 65536, 0, 720913, 65536, 0, 720912, 0, 0, 720911, 0, 0, 655375, 0, 0, 655374, 262144, 0, 655373, 0, 0, 655372, 0, 0, 655371, 0, 0, 655370, 0, 0, 655369, 0, 0, 655368, 0, 0, 655367, 0, 0, 655366, 0, 0, 655365, 0, 0, 655364, 0, 0, 655363, 0, 0, 655362, 0, 0, 655361, 0, 0, 655360, 0, 0, 720895, 0, 0, 720894, 0, 0, 720893, 0, 0, 655357, 65536, 0, 589820, 65536, 0, 524284, 0, 0, 458748, 0, 0, 393212, 0, 0, 327676, 0, 0, 262140, 0, 0, 196605, 0, 0, 131069, 0, 0, 131070, 0, 0, 393219, 262144, 0, 327683, 262144, 0, 262147, 262144, 0, 196611, 262144, 0, 131075, 262144, 0, 65539, 262144, 1, 3, 0, 0, -65533, 0, 0, -131069, 0, 0, -131070, 0, 0, -65534, 0, 0, -65535, 65536, 0, 1, 65536, 0, 0, 65536, 0, 65536, 0, 0, 131071, 65536, 0, 196607, 0, 0, 196606, 65536, 0, 262142, 65536, 0, 262141, 0, 0, 327677, 65536, 0, 393213, 65536, 0, 458749, 65536, 0, 524285, 65536, 0, 589821, 65536, 0, 589822, 65536, 0, 524286, 65536, 0, 458750, 0, 0, 393214, 65536, 0, 327678, 65536, 0, 327679, 0, 0, 262143, 65536, 0, 196608, 65536, 0, 131072, 0, 0, 131073, 0, 0, 65537, 0, 0, 65538, 0, 0, 2, 0, 0, 131074, 0, 0, 196610, 0, 0, 196609, 65536, 0, 262145, 0, 0, 262144, 0, 0, 327680, 65536, 0, 393215, 65536, 0, 458751, 0, 0, 524287, 65536, 0, 589823, 65536, 0, 655359, 0, 0, 655358, 65536, 0, 589824, 65536, 0, 524288, 65536, 0, 458752, 65536, 0, 393216, 0, 0, 393217, 65536, 0, 327681, 0, 0, 327682, 0, 0, 262146, 0, 0, 393218, 0, 0, 458754, 65536, 0, 458753, 0, 0, 524289, 65536, 0, 589825, 393216, 2, 589826, 327680, 0, 524290, 65536, 0, 524291, 262144, 0, 458755, 262144, 0, 458756, 0, 0, 393220, 0, 0, 327684, 0, 0, 262148, 0, 0, 196612, 0, 0, 131076, 0, 0, 65540, 327680, 0, 4, 0, 0, -65532, 0, 0, -131068, 0, 0, -131067, 0, 0, -65531, 0, 0, 5, 0, 0, 65541, 327680, 0, 131077, 0, 0, 196613, 0, 0, 262149, 0, 0, 327685, 0, 0, 393221, 0, 0, 458757, 0, 0, 524293, 0, 0, 524292, 0, 0, 589828, 327680, 0, 589827, 524288, 0, 589829, 327680, 0, 589830, 327680, 0, 524294, 0, 0, 458758, 0, 0, 393222, 0, 0, 327686, 0, 0, 262150, 0, 0, 196614, 0, 0, 131078, 0, 0, 65542, 327680, 0, 6, 0, 0, -65530, 0, 0, -65529, 0, 0, 7, 0, 0, 65543, 327680, 0, 131079, 0, 0, 196615, 0, 0, 262151, 0, 0, 327687, 0, 0, 393223, 0, 0, 458759, 0, 0, 524295, 0, 0, 589831, 327680, 0, 589832, 327680, 0, 524296, 0, 0, 458760, 0, 0, 393224, 0, 0, 327688, 0, 0, 262152, 0, 0, 196616, 0, 0, 131080, 0, 0, 65544, 327680, 2, 8, 262144, 0, -65528, 262144, 0, -65527, 0, 0, 9, 0, 0, 65545, 65536, 0, 131081, 0, 0, 196617, 0, 0, 262153, 0, 0, 327689, 0, 0, 393225, 0, 0, 458761, 0, 0, 524297, 0, 0, 589833, 327680, 0, 589834, 327680, 0, 524298, 0, 0, 458762, 0, 0, 393226, 0, 0, 327690, 0, 0, 262154, 0, 0, 196618, 0, 0, 131082, 0, 0, 65546, 65536, 0, 10, 0, 0, -65526, 0, 0, -65525, 0, 0, 11, 0, 0, 65547, 0, 0, 131083, 0, 0, 196619, 0, 0, 262155, 0, 0, 327691, 0, 0, 393227, 0, 0, 458763, 0, 0, 524299, 0, 0, 589835, 327680, 0, 589836, 327680, 0, 524300, 0, 0, 458764, 0, 0, 393228, 65536, 0, 327692, 65536, 0, 262156, 65536, 0, 196620, 0, 0, 131084, 0, 0, 65548, 0, 0, 12, 0, 0, -65524, 0, 0, -65523, 0, 0, 13, 0, 0, 65549, 0, 0, 131085, 65536, 0, 196621, 65536, 0, 262157, 0, 0, 327693, 0, 0, 393229, 65536, 0, 458765, 65536, 0, 524301, 0, 0, 589837, 327680, 0, 589838, 327680, 1, 524302, 0, 0, 458766, 65536, 0, 393230, 65536, 0, 327694, 131072, 4, 262158, 131072, 4, 196622, 0, 0, 131086, 0, 0, 65550, 65536, 0, 14, 0, 0, -65522, 0, 0, -65521, 0, 0, 15, 0, 0, 65551, 65536, 0, 131087, 65536, 0, 196623, 65536, 0, 262159, 65536, 0, 327695, 131072, 4, 393231, 131072, 4, 458767, 65536, 0, 524303, 0, 0, 589839, 0, 0, 589840, 0, 0, 524304, 0, 0, 458768, 65536, 0, 393232, 65536, 0, 327696, 65536, 0, 262160, 0, 0, 196624, 0, 0, 131088, 0, 0, 65552, 0, 0, 16, 0, 0, 17, 0, 0, 65553, 0, 0, 131089, 0, 0, 196625, 0, 0, 262161, 0, 0, 327697, 0, 0, 393233, 0, 0, 458769, 0, 0, 524305, 0, 0, 589841, 65536, 0, 655377, 65536, 0, 655376, 0, 0, 262162, 0, 0, 196626, 0, 0, 131090, 0, 0, 65554, 0, 0, 655356, 65536, 0)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
offset_left = 10.0
offset_top = 10.0
offset_right = 391.0
offset_bottom = 362.0
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
offset_right = 381.0
offset_bottom = 91.0
theme_override_font_sizes/font_size = 64
text = "Castle Typer"

[node name="Button_Play" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
offset_top = 101.0
offset_right = 381.0
offset_bottom = 178.0
theme_override_font_sizes/font_size = 50
text = "Play"

[node name="Button_Credits" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
offset_top = 188.0
offset_right = 381.0
offset_bottom = 265.0
theme_override_font_sizes/font_size = 50
text = "Credits"

[node name="Button_Quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
offset_top = 275.0
offset_right = 381.0
offset_bottom = 352.0
theme_override_font_sizes/font_size = 50
text = "Quit"

[node name="PopupPanel" type="PopupPanel" parent="PanelContainer"]
size = Vector2i(464, 320)

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/PopupPanel"]
offset_left = 4.0
offset_top = 4.0
offset_right = 460.0
offset_bottom = 316.0

[node name="Label" type="Label" parent="PanelContainer/PopupPanel/VBoxContainer"]
layout_mode = 2
offset_right = 456.0
offset_bottom = 114.0
theme_override_font_sizes/font_size = 25
text = "Sprites: 
  Platformer Pack Medieval by Kenney
  UI Adventure Pack by Kenney"

[node name="Label2" type="Label" parent="PanelContainer/PopupPanel/VBoxContainer"]
layout_mode = 2
offset_top = 118.0
offset_right = 456.0
offset_bottom = 194.0
theme_override_font_sizes/font_size = 25
text = "Coding and Game Design: 
  @atropos148
"

[node name="Label3" type="Label" parent="PanelContainer/PopupPanel/VBoxContainer"]
layout_mode = 2
offset_top = 198.0
offset_right = 456.0
offset_bottom = 312.0
theme_override_font_sizes/font_size = 25
text = "Based on game idea from: 
  Weekly Gamedev Challenge Godot
    - Week 7: Typing Game"

[connection signal="pressed" from="PanelContainer/VBoxContainer/Button_Play" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Button_Credits" to="." method="_on_button_credits_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Button_Quit" to="." method="_on_button_quit_pressed"]
